--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,10 +73,11 @@ width: 100%;
   transition: transform .4s ease;
   border: none;
   background-color: transparent;
-  margin-top: 10px;
+  margin-top: 0px;
   flex-wrap: wrap;
   justify-content: center;
-   
+  margin-right: 20px;
+  margin-left: auto; 
 }
 .cart-icon{
   font-size: 25px;
@@ -87,6 +88,11 @@ width: 100%;
   border: none;
   background-color: transparent;
 }
+
+.logo1{
+  cursor: pointer;
+}
+
 .cart-icon:hover{
   transform: scale(1.1,1.1);
 }
