--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,14 +25,14 @@ width: 100%;
 
 }
 .layout{
-  padding: 10px;
+  padding: 0px;
   
 }
 
 .navbar-container{
   display: flex;
   justify-content: space-between;
-  margin: -10px -10px 0px -10px;
+  margin: ;
   position: relative;
   z-index: 1;
   background-color: #000000;
