--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,21 @@ width: 100%;
   margin-left: 300; 
 }
 
+.termstext{
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  position: relative;
+  transition: transform .4s ease;
+  border: none;
+  background-color: transparent;
+  margin-top: 11px;
+  flex-wrap: wrap;
+  margin-right: 28px;
+  margin-left: 20px; 
+}
+
 
 .cart-icon{
   font-size: 25px;
