--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,6 +153,7 @@ width: 100%;
   gap: 15px;
   margin-top: 20px;
   width: 100%;
+  
 }
 .product-card{
  cursor: pointer;
@@ -181,11 +182,11 @@ width: 100%;
 }
 
 .hero-banner-container{
-  padding: 100px 40px;
+  padding: 100px 20px 0px 10px;
   background-color: #dcdcdc;
   border-radius: 15px;
   position: relative;
-  height: 500px;
+  height: 400px;
   line-height: 0.9; 
   width: 100%;
 
@@ -200,7 +201,7 @@ width: 100%;
   background-color: #edc100;
   color: white;
   border: none;
-  margin-top: 100px;
+  margin-top: 10px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
@@ -220,10 +221,10 @@ width: 100%;
   text-transform: uppercase;
 }
 .hero-banner-image{
+  font-size: 2rem;
+  margin-top: -190px;
+  margin-right: 200px;
   position: absolute;
-  margin-right:30px;
-  margin-top:90px;
-  z-index:0; 
 }
 
 
@@ -678,17 +679,12 @@ margin-top: 160px;
 
 @media screen and (max-width:800px) {
   .hero-banner-container{
-    height: 560px;
+    height: 450px;
   }
-  .hero-banner-image{
-    width: 77%;
-    height: 62%;
-    top: -2%;
-    right: -6%;
-  }
+  
   .footer-banner-container{
-    height: 560px;
-    margin-top: 80px;
+    height: 450px;
+    margin-top: 50px;
   }
   .footer-banner-image{
     width: 77%;
@@ -728,8 +724,10 @@ margin-top: 160px;
     margin-left: 0px;
   }
   .hero-banner-container button{
-    margin-top: 90px;
+    
     z-index: 10000;
+    position: relative;
+    
   }
   .desc{
    bottom: 60px;
