--- a/styles/globals.css
+++ b/styles/globals.css
@@ -205,7 +205,7 @@ width: 100%;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
-  z-index:20000;
+  z-index: 0;
 }
 
 .hero-banner-container h3{
@@ -222,9 +222,10 @@ width: 100%;
 }
 .hero-banner-image{
   font-size: 2rem;
-  margin-top: -190px;
-  margin-right: 200px;
+  margin-top: 150px;
   position: absolute;
+  padding: 10px 10px 10px 10px;
+  align: center;
 }
 
 
@@ -232,7 +233,7 @@ width: 100%;
 position: absolute;
 right: 10%;
 bottom: 5%;
-width: 300px;
+width: 200px;
 line-height: 1.3;
 display: flex;
 flex-direction: column;
@@ -260,6 +261,8 @@ text-align: end;
 .products-heading h2{
   font-size: 40px;
   font-weight: 800;
+  margin-top: 00px;
+  z-index: 10000;
 }
 .products-heading p{
   font-size: 16px;
@@ -725,7 +728,7 @@ margin-top: 160px;
   }
   .hero-banner-container button{
     
-    z-index: 10000;
+    z-index: 0;
     position: relative;
     
   }
