--- a/styles/globals.css
+++ b/styles/globals.css
@@ -187,7 +187,7 @@ width: 100%;
   border-radius: 15px;
   position: relative;
   height: 400px;
-  line-height: 0.9; 
+  line-height: 1.3; 
   width: 100%;
 
 }
@@ -201,11 +201,16 @@ width: 100%;
   background-color: #edc100;
   color: white;
   border: none;
-  margin-top: 10px;
+  margin-top: 250px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   z-index: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .hero-banner-container h3{
@@ -216,16 +221,13 @@ width: 100%;
 }
 .hero-banner-container h1{
   color: white;
-  font-size: 10em;
+  font-size: 4em;
   margin-left: -4px;
   text-transform: uppercase;
 }
 .hero-banner-image{
-  font-size: 2rem;
-  margin-top: 150px;
-  position: absolute;
-  padding: 10px 10px 10px 10px;
-  align: center;
+  margin-top: -250px;
+  float: right;
 }
 
 
@@ -261,7 +263,7 @@ text-align: end;
 .products-heading h2{
   font-size: 40px;
   font-weight: 800;
-  margin-top: 00px;
+  margin-top: 75px;
   z-index: 10000;
 }
 .products-heading p{
@@ -682,8 +684,19 @@ margin-top: 160px;
 
 @media screen and (max-width:800px) {
   .hero-banner-container{
-    height: 450px;
+    padding: 100px 20px 0px 10px;
+    background-color: #dcdcdc;
+    border-radius: 15px;
+    position: relative;
+    height: 400px;
+    line-height: 0.9; 
+    width: 100%;
   }
+  .hero-banner-image{
+    margin-top: -250px;
+    float: right;
+  }
+
   
   .footer-banner-container{
     height: 450px;
@@ -720,20 +733,44 @@ margin-top: 160px;
     line-height: 1.3;
   }
   .hero-banner-container h1{
-    font-size: 50px;
+  color: white;
+  font-size: 4em;
+  margin-left: -4px;
+  text-transform: uppercase;
   }
  .hero-banner-container h3{
-    font-size: 40px;
+    font-size: 4rem;
+    margin-top: 4px;
     margin-left: 0px;
   }
   .hero-banner-container button{
     
+    border-radius: 15px;
+    padding: 10px 16px;
+    background-color: #edc100;
+    color: white;
+    border: none;
+    margin-top: 250px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
     z-index: 0;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     
   }
   .desc{
-   bottom: 60px;
+    position: absolute;
+    right: 10%;
+    bottom: 5%;
+    width: 200px;
+    line-height: 1.3;
+    display: flex;
+    flex-direction: column;
+    color: #324d67;
   }
   .product-detail-container{
     flex-wrap: wrap;
@@ -820,4 +857,8 @@ margin-top: 160px;
   width: 300px;
   margin: auto;
 }
+
+
+
+
 }
