--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,14 +30,17 @@ width: 100%;
 }
 
 .navbar-container{
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   z-index: 1;
   background-color: #000000;
   position: fixed;
   top: 0;
   width: 100%;
-  
+  list-style:none;
+  margin:0;
+  padding:0;
+  text-align:center;
 }
 
 
