--- a/styles/globals.css
+++ b/styles/globals.css
@@ -281,18 +281,20 @@ text-align: end;
 .Team{
   text-align: center;
   margin: 40px 0px;
- color: #324d67;
+  color: #324d67;
 
 }
 .Team h2{
   font-size: 40px;
   font-weight: 800;
-  margin-top: 75px;
+  margin-top: 15px;
   z-index: 10000;
+  
 }
 .Team p{
   font-size: 16px;
   font-weight: 200;
+  margin-bottom: 50px;
 }
 
 
